tests/negative/for_no_marker.spk
(for v lst (print "$0" v))
